--- a/public/admin.html
+++ b/public/admin.html
@@ -1,95 +1,139 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Focus Control</title>
   <style>
+    :root {
+      color-scheme: dark;
+      --brand-primary: #221c3b;
+      --brand-accent: #2f2658;
+      --brand-pop: #6d5ad0;
+      --brand-soft: rgba(109, 90, 208, 0.26);
+      --surface: rgba(24, 18, 48, 0.9);
+      --border: rgba(109, 90, 208, 0.3);
+      --text-main: #f5f2ff;
+      --text-muted: rgba(245, 242, 255, 0.7);
+    }
+
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #101010;
-      color: #f5f5f5;
+      font-family: "Montserrat", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: radial-gradient(circle at 22% 18%, rgba(109, 90, 208, 0.26), transparent 55%),
+        radial-gradient(circle at 78% 22%, rgba(70, 56, 130, 0.38), transparent 50%),
+        linear-gradient(135deg, #120d25 0%, var(--brand-primary) 45%, #1b1532 100%);
+      color: var(--text-main);
       display: flex;
       justify-content: center;
       align-items: flex-start;
       min-height: 100vh;
-      padding: 32px 16px;
+      padding: 48px 20px;
     }
 
     .panel {
       width: 100%;
-      max-width: 720px;
-      background: #1c1c1c;
-      padding: 24px;
-      border-radius: 12px;
-      box-shadow: 0 0 24px rgba(0, 0, 0, 0.35);
+      max-width: 760px;
+      background: var(--surface);
+      padding: 36px;
+      border-radius: 24px;
+      border: 1px solid var(--border);
+      box-shadow: 0 45px 90px rgba(11, 9, 22, 0.55), inset 0 0 0 1px rgba(255, 255, 255, 0.04);
+      backdrop-filter: blur(12px);
+    }
+
+    .brand-chip {
+      display: inline-flex;
+      align-items: center;
+      padding: 8px 20px;
+      margin-bottom: 20px;
+      border-radius: 999px;
+      letter-spacing: 0.32em;
+      text-transform: uppercase;
+      font-weight: 700;
+      font-size: 0.75rem;
+      background: var(--brand-soft);
+      border: 1px solid rgba(109, 90, 208, 0.42);
+      color: var(--text-main);
     }
 
     h1 {
-      margin: 0 0 16px;
+      margin: 0 0 20px;
       text-transform: uppercase;
-      font-size: 1.4rem;
-      letter-spacing: 0.06em;
+      font-size: 1.6rem;
+      letter-spacing: 0.1em;
     }
 
     #currentFocus {
-      color: #ffd93d;
+      color: var(--brand-pop);
     }
 
     .buttons {
       display: flex;
       flex-wrap: wrap;
-      gap: 12px;
-      margin-bottom: 16px;
+      gap: 14px;
+      margin-bottom: 20px;
     }
 
     button.player {
-      padding: 10px 16px;
-      border-radius: 8px;
-      border: none;
-      background: #2a2a2a;
-      color: #f5f5f5;
+      padding: 12px 18px;
+      border-radius: 14px;
+      border: 1px solid rgba(109, 90, 208, 0.38);
+      background: rgba(37, 29, 66, 0.9);
+      color: var(--text-main);
       cursor: pointer;
-      font-size: 1rem;
-      transition: background 0.2s ease, transform 0.2s ease;
+      font-size: 0.95rem;
+      font-weight: 600;
+      letter-spacing: 0.05em;
+      transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
     }
 
     button.player:hover {
-      background: #3d3d3d;
-      transform: translateY(-1px);
+      transform: translateY(-2px);
+      box-shadow: 0 20px 40px rgba(15, 12, 36, 0.4);
     }
 
     button.player.active {
-      background: #ffd93d;
-      color: #121212;
-      font-weight: bold;
+      background: linear-gradient(145deg, var(--brand-pop), #4e3ca0);
+      border-color: transparent;
+      box-shadow: 0 24px 48px rgba(15, 12, 36, 0.55);
     }
 
     #refreshBtn {
-      padding: 10px 16px;
-      border-radius: 8px;
-      border: none;
-      background: #ffd93d;
-      color: #121212;
+      padding: 12px 18px;
+      border-radius: 14px;
+      border: 1px solid rgba(109, 90, 208, 0.45);
+      background: transparent;
+      color: var(--text-main);
       cursor: pointer;
-      font-weight: bold;
-      margin-bottom: 16px;
+      font-weight: 600;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+      transition: background 0.2s ease, transform 0.2s ease;
+    }
+
+    #refreshBtn:hover {
+      background: rgba(109, 90, 208, 0.18);
+      transform: translateY(-1px);
     }
 
     .note {
       margin: 0;
       font-size: 0.85rem;
-      color: #a0a0a0;
+      color: var(--text-muted);
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
     }
   </style>
 </head>
 <body>
   <div class="panel">
-    <h1>CURRENT FOCUS: <span id="currentFocus">—</span></h1>
+    <span class="brand-chip">Galaxy Battle</span>
+  <h1>Current Focus: <span id="currentFocus">-</span></h1>
     <div class="buttons" id="playerButtons"></div>
-    <button id="refreshBtn" type="button">Обновить список игроков</button>
-    <p class="note">Используй кнопки, чтобы вручную выбрать игрока в эфире.</p>
+    <button id="refreshBtn" type="button">Refresh player list</button>
+    <p class="note">Tap a name to push that POV to the focus feed.</p>
   </div>
 
   <script>
@@ -112,7 +156,7 @@
         const payload = await response.json();
         renderPlayers(payload.players || []);
       } catch (error) {
-        console.error("Не удалось получить список игроков", error);
+  console.error("Failed to fetch players", error);
       }
     }
 
@@ -138,13 +182,13 @@
           body: JSON.stringify({ nickname }),
         });
       } catch (error) {
-        console.error("Не удалось обновить фокус", error);
+  console.error("Failed to update focus", error);
       }
     }
 
     function updateFocusLabel(nickname) {
       currentFocus = nickname || null;
-      currentFocusLabel.textContent = currentFocus || "—";
+  currentFocusLabel.textContent = currentFocus || "-";
       highlightCurrent();
     }
 
@@ -169,7 +213,7 @@
             updateFocusLabel(message.currentFocus);
           }
         } catch (error) {
-          console.error("Ошибка обработки WS-сообщения", error);
+          console.error("Failed to handle WS message", error);
         }
       });
 
