--- a/public/team-t.html
+++ b/public/team-t.html
@@ -43,15 +43,17 @@
     }
 
     .team-brand {
+      position: relative;
       display: flex;
       align-items: center;
       gap: 32px;
     }
 
     .team-logo {
-      width: 140px;
-      height: 140px;
+      width: 156.07px;
+      height: 156.07px;
       object-fit: contain;
+      flex-shrink: 0;
       display: none;
     }
 
@@ -123,7 +125,7 @@
       top: 1px;
       width: 564.65px;
       height: 317.54px;
-      background: rgba(0, 0, 0, 0.94);
+      background: #000000;
       border-radius: 0;
       overflow: hidden;
     }
@@ -160,15 +162,15 @@
 
     .slot .nick {
       position: absolute;
+      top: 318.72px;
       left: 4px;
-      bottom: 10px;
-      width: calc(100% - 8px);
+      width: 557px;
       height: 51.56px;
       display: flex;
       align-items: center;
       justify-content: center;
       font-weight: 900;
-      font-size: 43.47px;
+      font-size: 43.4682px;
       line-height: 0.8256;
       letter-spacing: 0.08em;
       text-transform: uppercase;
