--- a/public/team-t.html
+++ b/public/team-t.html
@@ -168,7 +168,9 @@
       height: 51.56px;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
+      text-align: left;
+      padding-left: 12px;
       font-weight: 900;
       font-size: 43.4682px;
       line-height: 0.8256;
