--- a/public/team-ct.html
+++ b/public/team-ct.html
@@ -46,7 +46,7 @@
       position: relative;
       display: flex;
       align-items: center;
-      gap: 32px;
+      gap: 20px;
     }
 
     .team-logo {
@@ -55,6 +55,7 @@
       object-fit: contain;
       flex-shrink: 0;
       display: none;
+      margin-left: -200px;
     }
 
     #teamLabel {
